[gd_scene load_steps=6 format=3 uid="uid://blcb7mtdv687p"]

[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_appy3"]
[ext_resource type="PackedScene" uid="uid://c16mbpjdegf7t" path="res://assets/Nut_low/Standard Walk.fbx" id="2_yyjps"]

[sub_resource type="BoxShape3D" id="BoxShape3D_5q1p8"]
size = Vector3(0.614502, 0.625917, 0.126297)

[sub_resource type="SphereShape3D" id="SphereShape3D_0y8yc"]
radius = 1.84299

[sub_resource type="BoxShape3D" id="BoxShape3D_s1n1i"]
size = Vector3(0.6875, 0.634673, 0.342773)

[node name="Enemy" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_appy3")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00500488, -0.187043, 0.0277176)
shape = SubResource("BoxShape3D_5q1p8")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.916196, 0.33594)
light_color = Color(0.814269, 0, 0.0516188, 1)

[node name="Detector" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Detector"]
shape = SubResource("SphereShape3D_0y8yc")

[node name="Dead" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Dead"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0117188, -0.182661, 0.0319824)
shape = SubResource("BoxShape3D_s1n1i")

[node name="Standard Walk" parent="." instance=ExtResource("2_yyjps")]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)

[connection signal="body_entered" from="Detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_detector_body_exited"]
[connection signal="body_entered" from="Dead" to="." method="_on_dead_body_entered"]
